2024-01-16         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* packaging/gawk-json.spec.in (Requires): Require gawk >= 5.0.0
	because we're using namespaces.
	(BuildRequires): Require gawk-devel >= 5.0.0 to be consistent.

2023-12-06         Arnold D. Robbins     <arnold@skeeve.com>

	* awkjsonhandler.cpp: Update copyright.
	* json.cpp: Ditto.
	* NEWS: Updated.

2023-12-05         Arnold D. Robbins     <arnold@skeeve.com>

	* awkjsonhandler.cpp (EndArray): Only reset members if level is zero.
	Thanks to Renaud PACALET who reported it to the gawkextlib bug list.
	* configure.ac: Update version to 2.0.1.

2022-10-20         Arnold D. Robbins     <arnold@skeeve.com>

	* awkjsonhandler.cpp (setBooleanValue): New macro.
	(AwkJsonHandler::Bool): Use it if new enough gawkapi.
	* json.cpp (write_value): Handle AWK_BOOL if new enough gawkapi.

2020-10-07         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* json.cpp (do_json_fromJSON): Change error messages to
	say json::from_json instead of json_fromJSON.
	(do_json_toJSON): Chagne error messages to say json::to_json
	instead of json_toJSON.
	* packaging/gawk-json.spec.in: Update BuildRequires to support gawk API
	major version 3.

2020-09-07         Arnold D. Robbins     <arnold@skeeve.com>

	* NEWS: Update for version 2.0.0.
	* README: Updated to mention that the extension now uses
	namespaces.
	* configure.ac (AC_INIT): Increase version to 2.0.0.
	* json.cpp (func_table): Change names of the functions.
	(dl_load): Use "json" namespace.
	* json_compat.awk: New file.
	* Makefile.am (EXTRA_DIST): Add json_compat.awk.

2018-02-28         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* NEWS: Update for version 1.0.2
	* configure.ac (AC_INIT): Bump version to 1.0.2.
	* gawkapi.h: Remove private copy of header file, since the version
	in gawk 4.2.1 now works with C++ code.
	* Makefile.am (EXTRA_DIST): Remove gawkapi.h
	* README: Update comment regarding gawkapi.h, since gawk 4.2.1 has
	been released.