@@ -2,7 +2,9 @@ EXTRA_DIST = \
 	json.awk \
 	json.ok \
 	json-mdim.awk \
-	json-mdim.ok
+	json-mdim.ok \
+	json-bool.awk \
+	json-bool.ok
 
 # Get rid of core files when cleaning and generated .ok file
 CLEANFILES = _* *_.png core core.* junk out1 out2 out3 test1 test2 seq *~
@@ -15,7 +17,7 @@ include test.makefile
 check:	test-msg-start mytests test-msg-end
 	@$(MAKE) pass-fail || { $(MAKE) diffout; exit 1; }
 
-mytests: json json-mdim
+mytests: json json-mdim json-bool
 
 test-msg-start:
 	@echo "======== Starting json tests ========"
@@ -29,6 +31,11 @@ json::
 	@-$(CMP) $(srcdir)/$@.ok _$@ && rm -f _$@
 
 json-mdim::
+	@echo $@
+	@$(AWK) -l json -f $(srcdir)/$@.awk >_$@ 2>&1 || echo EXIT CODE: $$? >>_$@
+	@-$(CMP) $(srcdir)/$@.ok _$@ && rm -f _$@
+
+json-bool::
 	@echo $@
 	@$(AWK) -l json -f $(srcdir)/$@.awk >_$@ 2>&1 || echo EXIT CODE: $$? >>_$@
 	@-$(CMP) $(srcdir)/$@.ok _$@ && rm -f _$@
