@@ -1,0 +1,7 @@
+[true,42,"hello, world",{"x":"x","y":"y"},false]
+b[1] = true (1)
+b[2] = 42
+b[3] = hello, world
+b[4][x] = x
+b[4][y] = y
+b[5] = false (0)
