@@ -1,3 +1,8 @@
+2026-02-09         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* Makefile.am: Add new test: json-bool.
+	* json-bool.awk, json-bool.ok: New files.
+
 2023-12-05         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* Makefile.am: Add new test: json-mdim.
